--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   carousel_slider: ^4.0.0
   equatable: ^2.0.3
+  flutter_bloc: ^8.0.1
+
+  # flutter_bloc : ^7.0.0
 
 dev_dependencies:
   flutter_test:
