--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_bloc: ^8.0.1
   firebase_core: ^1.2.1
   cloud_firestore: ^2.2.1
+  pay: ^1.0.10
 
   # flutter_bloc : ^7.0.0
 
@@ -52,7 +53,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+  - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
